--- a/SportsOrganizer.Server/Components/AdminComponents/AdminActivityEditModalComponent/AdminActivityEditModal.razor
+++ b/SportsOrganizer.Server/Components/AdminComponents/AdminActivityEditModalComponent/AdminActivityEditModal.razor
@@ -166,7 +166,7 @@ else if (ModalParameters.EditType == EditType.Edit)
         </div>
     </ModalBody>
     <ModalFooter>
-        <Button Color="Color.Success" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
+        <Button Color="Color.Warning" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
         <Button Color="Color.Secondary" Clicked="ModalService.Hide">@Localizer["BtnCancel"]</Button>
     </ModalFooter>
 }
@@ -250,7 +250,7 @@ else if (ModalParameters.EditType == EditType.Delete)
         </div>
     </ModalBody>
     <ModalFooter>
-        <Button Color="Color.Success" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
+        <Button Color="Color.Danger" Clicked="Confirm">@Localizer["BtnConfirm"]</Button>
         <Button Color="Color.Secondary" Clicked="ModalService.Hide">@Localizer["BtnCancel"]</Button>
     </ModalFooter>
 }
