--- a/SportsOrganizer.Server/Pages/_Host.cshtml
+++ b/SportsOrganizer.Server/Pages/_Host.cshtml
@@ -77,6 +77,27 @@
                 linkTag.href = 'css/bootstrap/' + themeName + '.min.css';
             }
         }
+
+        window.downloadFile = (filename, data) => {
+            // Create a Blob object with data.
+            var blob = new Blob([data], { type: 'application/octet-stream' });
+
+            // Create a URL for the blob object.
+            var url = window.URL.createObjectURL(blob);
+
+            // Create a download link.
+            var a = document.createElement('a');
+            a.href = url;
+            a.download = filename;
+
+            // Append the download link to the body, and click it.
+            document.body.appendChild(a);
+            a.click();
+
+            // Clean up.
+            document.body.removeChild(a);
+            window.URL.revokeObjectURL(url);
+        };
     </script>
 </body>
 </html>
